
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,...) ;

void print_hex(char *p)
{
 char *q;

 q=p;

 while(*q) {
  if (*q > 32 && *q < 127) {
   printf("%c",*q);
  } else {
   printf(" ");
  }
  q++;
 }
}
